# bilibili-player

./: .gitignore  CMakeLists.txt  README.md
release/: bilibili-player
src/: main.cpp  resource.qrc
src/entity/: Playlist.cpp  Playlist.h  Video.cpp  Video.h
src/gui/: GuiVideo.cpp  GuiVideo.h  WinAddVideo.cpp  WinAddVideo.h  WinAddVideo.ui  WinEdit.cpp  WinEdit.h  WinEdit.ui  WinInfo.cpp  WinInfo.h  WinInfo.ui  WinLogs.cpp  WinLogs.h  WinLogs.ui  WinMain.cpp  WinMain.h  WinMain.ui  WinPlayer.cpp  WinPlayer.h  WinSettings.cpp  WinSettings.h  WinSettings.ui  WinTasks.cpp  WinTasks.h  WinTasks.ui  ui_WinAddVideo.h  ui_WinEdit.h  ui_WinInfo.h  ui_WinLogs.h  ui_WinMain.h  ui_WinSettings.h  ui_WinTasks.h
src/lang/: en_US.ts  zh_CN.qm  zh_CN.ts
src/util/: Config.cpp  Config.h  Log.cpp  Log.h  Network.cpp  Network.h
